# SoftEdIBO

./: .gitignore  1  README.md  _esptool_main.py  install.sh  pyproject.toml  requirements.txt  softedibo.spec
.github/workflows/: build.yml
config/: settings.yaml
data/: last_assignments.json
firmware/air_chamber_node/: README.md  platformio.ini
firmware/gateway/: README.md
firmware/node_direct/: README.md  platformio.ini
firmware/node_multiplexed_pump/: README.md  platformio.ini
firmware/node_multiplexed_reservoir/: platformio.ini
firmware/node_pump/: README.md  platformio.ini
firmware/node_reservoir/: README.md  platformio.ini
hardware_PCB/Data_sheets/: 3297 EDA | Download de model.textClipping
hardware_PCB/KiCad/: KI-eagle-import.kicad_sym  KI.kicad_pcb  KI.kicad_prl  KI.kicad_pro  KI.kicad_sch  sym-lib-table
scripts/: compile_ui.sh  discover_nodes.py  run.py
src/: _version.py  crash_handler.py  log.py  updater.py
src/activities/: __init__.py  base_activity.py  group_touch.py  simulation_activity.py
src/config/: settings.py
src/core/: participant.py  session.py
src/data/: database.py  event_logger.py  last_assignments.py  models.py
src/gui/: assignment_dialog.py  data_panel.py  home_panel.py  main_window.py  node_config_dialog.py  participant_dialog.py  participant_panel.py  robot_config_dialog.py  robot_panel.py  session_panel.py  session_setup_dialog.py  settings_dialog.py  (+4 more)
tests/: test_database.py  test_esp32_controller.py  test_espnow_gateway.py  test_gui.py  test_thymio_robot.py  test_tree_robot.py  test_turtle_robot.py
(+90 files in other folders)
